<resources>
    <string name="app_name">LiveLink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">REGISTRIEREN</string>
    <string name="already_registered">Bereits registriert? Zur Anmeldung</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="password_again">Passwort wdh.</string>
    <string name="email">E-Mail</string>
    <string name="login_button">Einloggen</string>
    <string name="signup_link">Noch nicht registriert? Hier lang</string>
    <string name="forgot_password">Passwort vergessen</string>
    <string name="logout">Ausloggen</string>
    <string name="channel">Channels</string>
    <string name="profiledit">Profil bearbeiten</string>
    <string name="forgotpasswordButton">Passwort zurücksetzen</string>
    <string name="login_link">Zum Login</string>
    <string name="name">Name</string>
    <string name="age">Alter</string>
    <string name="birthday">Geburtstag</string>
    <string name="gender">Geschlecht</string>
    <string name="relationship_status">Beziehungsstatus</string>
    <string name="save">Speichern</string>
    <string name="zip_code">Postleitzahl</string>
    <string name="country">Land</string>
    <string name="greeting">Hallo %s</string>
    <string name="age_onlineUser">(%s)</string>
    <string name="profile_reg">%s hat sich am %s um %s hier registriert.</string>
    <string name="profile_lock">%s ist von %s %s.\nBegründung:\n%s</string>
    <string name="profile_offline">Ist aktuell Offline</string>
    <string name="profile_online">Online im Channel %s</string>
    <string name="search_channels">Suche nach Channel</string>
    <string name="wildspace">Wildspace</string>
    <string-array name="gender_options">
        <item>Keine Angabe</item>
        <item>Männlich</item>
        <item>Weiblich</item>
        <item>Divers</item>
    </string-array>
    <string-array name="relationship_status_options">
        <item>Keine Angabe</item>
        <item>Single</item>
        <item>Auf Wolke7</item>
        <item>Vergeben</item>
        <item>Glücklich Vergeben</item>
        <item>Verheiratet</item>
        <item>Geschieden</item>
        <item>Verwitwet</item>
        <item>On Off</item>
        <item>Beziehungsunfähig</item>
        <item>Kann man das Essen?</item>
    </string-array>
    <string-array name="country_options">
        <item>Keine Angabe</item>
        <item>Deutschland</item>
        <item>Österreich</item>
        <item>Schweiz</item>
    </string-array>


</resources>